--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Quicksand:wght@300..700&family=Tomorrow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+:root{
+    --body-bg: rgb(100,100,100);
+}
+
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
 }
 
 body{
+    background-color: var(--body-bg);
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
+}
+
+.all-page{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
