--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,28 @@ body{
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+}
+
+.footer{
+    position: fixed;
+    bottom: 0;
+    background-color: var(--notification-bg);
+    color: var(--notification-txt);
+    font-weight: 700;
+    font-family: 'Quicksand';
+    font-size: 1vw;
+    z-index: 10;
+    
+    width: 100%;
+    height: 6.5vh;
+    
+    padding: 1vw 2vw 1vw 25vw;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    box-shadow: rgba(0, 0, 0, 1) 0 .3vw 1vw;
 }
