--- a/assets/css/notification.css
+++ b/assets/css/notification.css
@@ -19,7 +19,7 @@
     font-size: 1vw;
     z-index: 1002;
     
-    width: 100vw;
+    width: 100%;
     height: 6.5vh;
     
     padding: 1vw 2vw 1vw 2vw;
